--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -6,14 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".UpdateProfile">
 
-    <ImageView
+    <com.blogspot.atifsoftwares.circularimageview.CircularImageView
         android:id="@+id/imgUpdateProfilePic"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
-        android:layout_marginTop="108dp"
+        android:layout_marginTop="100dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -68,9 +68,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/custom_button"
         android:text="Change password"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/btnSaveProfileInformation"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/btnSaveProfileInformation"
-        app:layout_constraintTop_toBottomOf="@+id/btnSaveProfileInformation" />
+        app:layout_constraintTop_toBottomOf="@+id/btnSaveProfileInformation"
+        app:layout_constraintVertical_bias="0.0" />
 </android.support.constraint.ConstraintLayout>
