--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -13,14 +13,10 @@
         android:orientation="vertical"
         android:gravity="center">
 
-
-        <ImageView
+        <com.blogspot.atifsoftwares.circularimageview.CircularImageView
             android:id="@+id/imgProfilePicture"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             app:srcCompat="@drawable/com_facebook_profile_picture_blank_portrait" />
 
         <TextView
